2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: remove install-images target and use automake
	syntax to distribute image data.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* Makefile.am (DOCSTRINGS): Use $(cp_update_rule) instead of
	cp -a --update.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Copy DOCSTRINGS from srcdir to builddir if it does not
	exist.  Enables VPATH builds.

2009-12-08  Petr Mikulik <mikulik@physics.muni.cz>

	* plot/gnuplot_drawnow.m: Prune prompt lines from dumb terminal output.
	* plot/__go_draw_figure__.m: Add missing 'unset multiplot' to restore
	hotkey and mouse functionality for 2D plots.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Distribute DOCSTRINGS in tar.gz file
	* mkdoc: pass current directory, "./", when running mkdoc on local files

2009-12-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp1q.m: Use more optimal code.

2009-12-08  John W. Eaton  <jwe@octave.org>

	* Makefile.am (DOCSTRINGS): Depend on $(GEN_FCN_FILES) instead
	of $(FCN_FILES_IN).  Pass $(GEN_FCN_FILES) to mkdoc instead of
	$(FCN_FILES_IN).  Use mv instead of $(simple_move_if_change_rule).
	(EXTRA_DIST): Include  $(GEN_FCN_FILES) in the list.

2009-12-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp1.m: Allow discontinuities (jumps) for the "nearest" and
	"linear" methods. Document the feature and add a few tests.

2009-12-06  Rik <rik@nomad.inbox5.com>

	* Makefile.am: Distribute DOCSTRINGS so that documentation will not require
	rebuild after merely untarring a distribution.
	* mkdoc: Change output to refer to mfiles as "scripts/..." rather than
	"$srcdir/...".  Otherwise, distributed DOCSTRINGS file will not match
	DOCSTRINGS created under a VPATH build and documentation will be
	unnecessarily rebuilt.

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* set/ismember.m: Simplify.

2009-12-03  John W. Eaton  <jwe@octave.org>

	* audio/wavwrite.m: Delete generated a.wav file after each test.
